--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -75,7 +75,7 @@ xmlns:customfontdemo="http://schemas.android.com/tools">
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:gravity="center_horizontal"
-                android:padding="5dp"
+                android:padding="2dp"
                 android:text="@string/app_name_line"
                 android:textColor="@color/grey2"
                 android:textSize="15sp"
@@ -101,9 +101,8 @@ xmlns:customfontdemo="http://schemas.android.com/tools">
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/rd"
-                android:padding="3dp"
                 android:layout_centerHorizontal="true"
-                android:text="(For Official Use)"
+                android:text="@string/for_official_use"
                 android:textColor="@color/grey2"
                 android:textSize="15sp"
                 android:textStyle="bold"
@@ -303,7 +302,7 @@ xmlns:customfontdemo="http://schemas.android.com/tools">
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="10dp"
                                     android:layout_marginEnd="10dp"                                    android:layout_marginTop="@dimen/padding"
-                                    android:text="User Name"
+                                    android:text="@string/hint_username"
                                     android:textColor="@color/grey2"
                                     android:textSize="15sp"
                                     android:visibility="visible"
@@ -381,7 +380,7 @@ xmlns:customfontdemo="http://schemas.android.com/tools">
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="10dp"
                                     android:layout_marginEnd="10dp"                                    android:layout_marginTop="@dimen/padding"
-                                    android:text="Password"
+                                    android:text="@string/hint_password"
                                     android:textColor="@color/grey2"
                                     android:textSize="15sp"
                                     android:visibility="visible"
@@ -452,7 +451,7 @@ xmlns:customfontdemo="http://schemas.android.com/tools">
                     android:layout_marginTop="-35dp"
                     android:visibility="visible"
                     android:onClick="@{()-> activity.checkLoginScreen()}"
-                    android:text="Login"
+                    android:text="@string/btn_login"
                     android:layout_centerHorizontal="true"
                     android:layout_gravity="center"
                     android:textAllCaps="true"
@@ -487,7 +486,7 @@ xmlns:customfontdemo="http://schemas.android.com/tools">
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/_13sdp"
-                    android:text="Software Designed &amp; Developed by NIC Chennai"
+                    android:text="@string/software_designed_developed_by_NIC_chennai"
                     android:textAlignment="center"
                     android:textColor="@android:color/white"
                     android:textSize="@dimen/_13sdp" />
