--- a/app/src/main/res/layout/field_visit_history_recycler.xml
+++ b/app/src/main/res/layout/field_visit_history_recycler.xml
@@ -68,7 +68,7 @@
                 android:textSize="16sp"
                 android:textColor="@color/grey1"
                 android:id="@+id/name"
-                android:text="Request ID"
+                android:text="@string/request_id"
                 android:fontFamily="sans-serif" />
             <TextView
                 android:layout_width="0dp"
@@ -116,7 +116,7 @@
                 android:textColor="@color/grey1"
                 android:id="@+id/mobile"
                 android:layout_below="@+id/name"
-                android:text="Tax Type"
+                android:text="@string/tax_type"
                 android:fontFamily="sans-serif" />
             <TextView
                 android:layout_width="0dp"
@@ -166,7 +166,7 @@
                 android:textColor="@color/grey1"
                 android:id="@+id/paymentDate"
                 android:layout_below="@+id/mobile"
-                android:text="Status"
+                android:text="@string/current_status"
                 android:fontFamily="sans-serif" />
             <TextView
                 android:layout_width="0dp"
@@ -234,7 +234,7 @@
                 android:textSize="16sp"
                 android:textColor="@color/grey1"
                 android:id="@+id/ward_name"
-                android:text="Ward Name"
+                android:text="@string/ward_name"
                 android:fontFamily="sans-serif" />
             <TextView
                 android:layout_width="0dp"
@@ -280,7 +280,7 @@
                 android:textColor="@color/grey1"
                 android:id="@+id/street_name"
                 android:layout_below="@+id/name"
-                android:text="Street Name"
+                android:text="@string/street_name"
                 android:fontFamily="sans-serif" />
             <TextView
                 android:layout_width="0dp"
@@ -327,7 +327,7 @@
                 android:layout_gravity="center_vertical"
                 android:textColor="@color/grey1"
                 android:id="@+id/remarks"
-                android:text="Remarks"
+                android:text="@string/remarks"
                 android:fontFamily="sans-serif" />
             <TextView
                 android:layout_width="0dp"
